Add automated tests for Lucene vector and search databases
- Introduced `autoTestLucene.js` to test VectorDB, SearchDBChannel, SearchDBAdvanced, and SearchDBHelper functionalities.
- Created `autoTestLucene.yaml` to define job execution flow for the tests, including initialization and result reporting.
- Each test verifies key operations such as document insertion, retrieval, filtering, and advanced search capabilities.

--- a/lucene/.maven.yaml
+++ b/lucene/.maven.yaml
@@ -1,5 +1,5 @@
 artifacts:
 - group  : org.apache.lucene
-  id     : lucene-core
+  id     : lucene-analysis-common
 - group  : org.apache.lucene
-  id     : lucene-analyzers-common
+  id     : lucene-queryparser
