--- a/AWS/oJobECR.yaml
+++ b/AWS/oJobECR.yaml
@@ -35,7 +35,7 @@ jobs:
   to   : HTTP Browse generic
   typeArgs:
     noLog   : false 
-    shortcut:
+    shortcut: &httpBrowseECRTypeArgs
       name  : ECRBrowse
       keyArg: port
       args  : 
@@ -59,7 +59,7 @@ jobs:
         s3region   : s3region        # optional s3 region for static markdown description files
         s3bucket   : s3bucket        # optional s3 bucket containing static markdown description files
         s3prefix   : s3prefix        # optional s3 prefix for static markdown description files
-  exec : | #js
+  exec : &httpBrowseECRExec | #js
     args.options = merge(args.options, {
       showURI : args.incURI,
       sortTab : args.sortTab,
@@ -335,3 +335,14 @@ jobs:
         }
       }
     }
+
+# ----------------------------
+- name    : HTTP Browse - ecr - API
+  to      : HTTP Browse API
+  typeArgs:
+    noLog   : false
+    shortcut:
+      <<    : *httpBrowseECRTypeArgs
+      name  : ECRBrowseAPI
+  exec    : *httpBrowseECRExec
+
