Add new dependencies and update Dockerfile for ghcopilot integration
- Changed base image in Dockerfile to openaf/oaf:edge-t8 and adjusted installation commands
- Enhanced README.md with new tool usage examples and updated provider definition
- Introduced copilot-sdk-1.0.9.jar and jackson-datatype-jsr310-2.20.1.jar

--- a/ghcopilot/Dockerfile
+++ b/ghcopilot/Dockerfile
@@ -1,8 +1,8 @@
-FROM openaf/oaf:alpine
+FROM openaf/oaf:edge-t8
 
-RUN apk add --no-cache nodejs npm \
-  && npm install -g @github/copilot \
-  && npm cache clean --force
+RUN sudo apk add --no-cache nodejs npm \
+  && sudo npm install -g @github/copilot \
+  && sudo npm cache clean --force
 
 ENV GITHUB_TOKEN=""
 ENV GH_TOKEN=""
