--- a/ghcopilot/.package.yaml
+++ b/ghcopilot/.package.yaml
@@ -28,9 +28,13 @@ files:
 - .package.yaml
 - Dockerfile
 - README.md
+- copilot-sdk-1.0.9.jar
 - ghcopilot.js
+- jackson-datatype-jsr310-2.20.1.jar
 filesHash:
   .maven.yaml: e77d659041aeb5d864d85d7b22233249b97283e6
-  Dockerfile: 559694013129e71b5964a80f7860d12429a5b1a7
-  README.md: dcac387869179c493dc276e8bf3b2059862abcab
-  ghcopilot.js: 3f9df1e0f00dc2bb8f6de39e05ef9a4cfb614ade
+  Dockerfile: 4a6c59e651bc35f57b2f78ac8a286ada43f84d45
+  README.md: 6f60fc851effd2d520fdffb185e4ebc15ca1f5cc
+  copilot-sdk-1.0.9.jar: 60beeb48e402be84cbb6eafcdb214aed9aab9c0b
+  ghcopilot.js: f730c4f74c6b3bad9c6e60fd34c61ba7c6867b26
+  jackson-datatype-jsr310-2.20.1.jar: 7ad06a455afc4a38412d5dab127191bdc3d90faf
